--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,12 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+NEXT_PUBLIC_API_URL=http://localhost:3001
