--- a/package.json
+++ b/package.json
@@ -31,11 +31,16 @@
     "zustand": "^5.0.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/testing-library__user-event": "^4.1.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
