--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-slider": "^1.3.4",
     "@radix-ui/react-slot": "^1.2.2",
-    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "critters": "^0.0.25",
@@ -41,7 +40,12 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/testing-library__user-event": "^4.1.1",
-    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.21",
+    "css-loader": "^7.1.2",
+    "postcss": "^8.5.5",
+    "postcss-loader": "^8.1.1",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^4.1.10",
     "typescript": "^5"
   }
 }
